# ext4-fs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: coverage.yml  deny.yml  publish.yml  pullrequest.yml
examples/extfs/: Cargo.toml
examples/extfs/src/: main.rs
src/: descriptors.rs  directory.rs  error.rs  extents.rs  extfs.rs  inode.rs  lib.rs  reader.rs  structs.rs
src/superblock/: block.rs
src/utils/: bytes.rs  encoding.rs  mod.rs  strings.rs
tests/: images_tests.rs
tests/debian/bookworm/: descriptor.raw  firstblock.raw  root.raw
tests/images/: README.md
tests/keramics/: LICENSE
