[package]
name = "ext4-fs"
version = "0.1.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/puffyCid/ext4-fs"
description = "A very basic library to read the ext4 filesystem"
keywords = ["forensics"]

[dependencies]
nom = "8.0.0"
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.28"
base64 = "0.22.1"
uuid = { version = "1.18.1", features = ["v4"] }
md-5 = "0.10.6"
sha-1 = "0.10.1"
sha2 = "0.10.9"