[package]
name = "extfs-tool"
version = "0.1.0"
edition = "2024"

[dependencies]
ext4-fs = {path = "../.."}
simplelog = "0.12.2"
csv = "1.3.1"
chrono = "0.4.41"
log = "0.4.27"
serde_json = "1.0.140"
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
