[package]
name = "extfs-tool"
version = "0.1.0"
edition = "2024"

[dependencies]
ext4-fs = { path = "../.." }
simplelog = "0.12.2"
csv = "1.4.0"
chrono = "0.4.42"
log = "0.4.28"
serde_json = "1.0.145"
clap = { version = "4.5.50", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
